// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`action generators addSkill matches snapshot 1`] = `
Object {
  "graphql": Object {
    "query": "mutation ($name: String) {
        addSkill(name: $name) {
          id,
          name
        }
      }",
    "variables": Object {
      "name": "Singing",
    },
  },
  "meta": Object {
    "name": "Singing",
    "optimistic": true,
  },
  "type": "SkillEditor/ADD_SKILL",
}
`;

exports[`action generators removeSkill matches snapshot 1`] = `
Object {
  "graphql": Object {
    "query": "mutation ($name: String) {
        removeSkill(name: $name) {
          success
        }
      }",
    "variables": Object {
      "name": "Singing",
    },
  },
  "meta": Object {
    "name": "Singing",
    "optimistic": true,
  },
  "type": "SkillEditor/REMOVE_SKILL",
}
`;

exports[`action generators setSkill matches snapshot 1`] = `
Object {
  "payload": "Singing",
  "type": "SkillEditor/SET_SKILL",
}
`;

exports[`action generators setUserSkills matches snapshot 1`] = `
Object {
  "payload": Array [
    "one",
    "two",
  ],
  "type": "SkillEditor/SET_USER_SKILLS",
}
`;

exports[`reducer on ADD_SKILL_PENDING adds a skill 1`] = `
Object {
  "skill": "",
  "userSkills": Array [
    "oneing",
    "twoing",
    "threeing",
  ],
}
`;

exports[`reducer on REMOVE_SKILL_PENDING removes a skill 1`] = `
Object {
  "userSkills": Array [
    "oneing",
    "threeing",
  ],
}
`;
